# protondrive-linux

./: .SRCINFO  CHANGELOG.md  FINAL_DEPLOYMENT.sh  PKGBUILD  README.md  deploy.sh  distribute.sh  launch.sh  manual_configure.py  protondrive-gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  submit-aur.sh  test_2fa_config.py  test_app.py
.github/workflows/: ci.yml
packaging/debian/: control
packaging/fedora/: protondrive-linux.spec
packaging/flatpak/: io.github.donniedice.protondrive.yaml
packaging/snap/: snapcraft.yaml
protondrive/: __init__.py  __main__.py  gui.py
protondrive_linux.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build-release.sh
src/protondrive-linux-1.0.0/: protondrive-linux.desktop  setup.py
