[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "protondrive-linux"
version = "1.0.1"
description = "ProtonDrive Linux GUI Client"
readme = "README.md"
authors = [{name = "donniedice", email = "donniedice@protonmail.com"}]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/donniedice/protondrive-linux"
Issues = "https://github.com/donniedice/protondrive-linux/issues"

[project.scripts]
protondrive-gui = "protondrive:main"

[tool.setuptools]
packages = ["protondrive"]